--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ function FortuneTypeCard({type,className=""}){
     {(()=>{
       const [showShare,setShowShare]=useState(false);
       const shareText=`${type.name}（${type.sub}）\n${type.share}\n\n夢占い×ホロスコープ「よるのことば」`;
-      const shareUrl="https://nbyk115.github.io/yorunokotoba/";
+      const shareUrl="https://yorunokotoba.vercel.app";
       function copyText(){navigator.clipboard.writeText(shareText+"\n"+shareUrl).then(()=>alert("コピーしました！")).catch(()=>{const ta=document.createElement("textarea");ta.value=shareText+"\n"+shareUrl;document.body.appendChild(ta);ta.select();document.execCommand("copy");document.body.removeChild(ta);alert("コピーしました！")})}
       return<>
         <button onClick={()=>setShowShare(!showShare)} className="hover-lift" style={{width:"100%",padding:"14px",borderRadius:14,border:"1px solid rgba(232,98,124,0.18)",background:"rgba(232,98,124,0.05)",color:"var(--rose)",fontSize:13,fontWeight:600,fontFamily:"Zen Maru Gothic, sans-serif",cursor:"pointer",marginBottom:showShare?8:8}}>{isSSR?"🌟 伝説タイプをシェア":"📱 タイプをシェア"}</button>
@@ -646,33 +646,56 @@ function App(){
           const [showInstall,setShowInstall]=useState(false);
           const isIOS=/iPad|iPhone|iPod/.test(navigator.userAgent);
           const isAndroid=/Android/.test(navigator.userAgent);
-          return<div style={{marginBottom:16}}>
-            <button onClick={()=>setShowInstall(!showInstall)} className="hover-lift" style={{width:"100%",padding:"14px",borderRadius:14,border:"1px solid rgba(232,98,124,0.18)",background:"rgba(232,98,124,0.05)",color:"var(--rose)",fontSize:13,fontWeight:600,fontFamily:"Zen Maru Gothic, sans-serif",cursor:"pointer"}}>📌 ホーム画面に追加する</button>
-            {showInstall&&<div className="fade-in" style={{marginTop:10,padding:"16px 18px",borderRadius:14,background:"var(--card)",border:"1px solid var(--border)",textAlign:"left"}}>
-              {isIOS?<>
-                <p style={{fontSize:13,fontWeight:700,color:"var(--t1)",marginBottom:10}}>iPhoneの場合</p>
-                <div style={{display:"flex",alignItems:"center",gap:10,marginBottom:8}}>
-                  <span style={{fontSize:18}}>①</span>
-                  <p style={{fontSize:12,color:"var(--t2)",lineHeight:1.7}}>画面下の <span style={{display:"inline-flex",verticalAlign:"middle"}}><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="var(--rose)" strokeWidth="2"><path d="M4 12v8a2 2 0 002 2h12a2 2 0 002-2v-8"/><polyline points="16 6 12 2 8 6"/><line x1="12" y1="2" x2="12" y2="15"/></svg></span> シェアボタンをタップ</p>
+          return<div style={{marginBottom:20}}>
+            <button onClick={()=>setShowInstall(!showInstall)} className="hover-lift" style={{width:"100%",padding:"16px",borderRadius:16,border:"none",background:"var(--grad)",color:"#fff",fontSize:13,fontWeight:700,fontFamily:"Zen Maru Gothic, sans-serif",cursor:"pointer",display:"flex",alignItems:"center",justifyContent:"center",gap:8}}>
+              <span style={{fontSize:16}}>📱</span> アプリみたいに使う
+              <span style={{fontSize:10,opacity:0.8,marginLeft:4}}>{showInstall?"▲":"▼"}</span>
+            </button>
+            {showInstall&&<div className="fade-in" style={{marginTop:12,borderRadius:16,overflow:"hidden",border:"1px solid var(--border)",background:"var(--card)"}}>
+              <div style={{padding:"16px 20px 12px",background:"linear-gradient(135deg,rgba(232,98,124,0.06),rgba(176,138,207,0.06))"}}>
+                <p style={{fontSize:13,fontWeight:700,color:"var(--t1)",marginBottom:4}}>ホーム画面に追加する方法</p>
+                <p style={{fontSize:11,color:"var(--t3)"}}>たった2ステップでアプリ風に使えるよ</p>
+              </div>
+              {isIOS?<div style={{padding:"16px 20px"}}>
+                <div style={{display:"flex",gap:14,marginBottom:16,alignItems:"flex-start"}}>
+                  <div style={{minWidth:36,height:36,borderRadius:10,background:"rgba(232,98,124,0.1)",display:"flex",alignItems:"center",justifyContent:"center",fontWeight:700,color:"var(--rose)",fontSize:14}}>1</div>
+                  <div style={{flex:1}}>
+                    <p style={{fontSize:13,fontWeight:600,color:"var(--t1)",marginBottom:4}}>シェアボタンをタップ</p>
+                    <p style={{fontSize:11,color:"var(--t3)",lineHeight:1.6}}>Safariの画面下にある
+                      <span style={{display:"inline-flex",verticalAlign:"middle",margin:"0 3px"}}><svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="var(--rose)" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round"><path d="M4 12v8a2 2 0 002 2h12a2 2 0 002-2v-8"/><polyline points="16 6 12 2 8 6"/><line x1="12" y1="2" x2="12" y2="15"/></svg></span>
+                      このアイコンをタップ</p>
+                  </div>
                 </div>
-                <div style={{display:"flex",alignItems:"center",gap:10}}>
-                  <span style={{fontSize:18}}>②</span>
-                  <p style={{fontSize:12,color:"var(--t2)",lineHeight:1.7}}>「<span style={{fontWeight:700,color:"var(--rose)"}}>ホーム画面に追加</span>」をタップ</p>
+                <div style={{display:"flex",gap:14,alignItems:"flex-start"}}>
+                  <div style={{minWidth:36,height:36,borderRadius:10,background:"rgba(232,98,124,0.1)",display:"flex",alignItems:"center",justifyContent:"center",fontWeight:700,color:"var(--rose)",fontSize:14}}>2</div>
+                  <div style={{flex:1}}>
+                    <p style={{fontSize:13,fontWeight:600,color:"var(--t1)",marginBottom:4}}>「ホーム画面に追加」を選択</p>
+                    <p style={{fontSize:11,color:"var(--t3)",lineHeight:1.6}}>メニューを下にスクロールすると見つかるよ</p>
+                  </div>
                 </div>
-              </>:isAndroid?<>
-                <p style={{fontSize:13,fontWeight:700,color:"var(--t1)",marginBottom:10}}>Androidの場合</p>
-                <div style={{display:"flex",alignItems:"center",gap:10,marginBottom:8}}>
-                  <span style={{fontSize:18}}>①</span>
-                  <p style={{fontSize:12,color:"var(--t2)",lineHeight:1.7}}>右上の <span style={{fontWeight:700}}>⋮</span> メニューをタップ</p>
+              </div>:isAndroid?<div style={{padding:"16px 20px"}}>
+                <div style={{display:"flex",gap:14,marginBottom:16,alignItems:"flex-start"}}>
+                  <div style={{minWidth:36,height:36,borderRadius:10,background:"rgba(232,98,124,0.1)",display:"flex",alignItems:"center",justifyContent:"center",fontWeight:700,color:"var(--rose)",fontSize:14}}>1</div>
+                  <div style={{flex:1}}>
+                    <p style={{fontSize:13,fontWeight:600,color:"var(--t1)",marginBottom:4}}>メニューを開く</p>
+                    <p style={{fontSize:11,color:"var(--t3)",lineHeight:1.6}}>Chromeの右上にある <span style={{fontWeight:700,fontSize:16}}>⋮</span> をタップ</p>
+                  </div>
                 </div>
-                <div style={{display:"flex",alignItems:"center",gap:10}}>
-                  <span style={{fontSize:18}}>②</span>
-                  <p style={{fontSize:12,color:"var(--t2)",lineHeight:1.7}}>「<span style={{fontWeight:700,color:"var(--rose)"}}>ホーム画面に追加</span>」をタップ</p>
+                <div style={{display:"flex",gap:14,alignItems:"flex-start"}}>
+                  <div style={{minWidth:36,height:36,borderRadius:10,background:"rgba(232,98,124,0.1)",display:"flex",alignItems:"center",justifyContent:"center",fontWeight:700,color:"var(--rose)",fontSize:14}}>2</div>
+                  <div style={{flex:1}}>
+                    <p style={{fontSize:13,fontWeight:600,color:"var(--t1)",marginBottom:4}}>「ホーム画面に追加」を選択</p>
+                    <p style={{fontSize:11,color:"var(--t3)",lineHeight:1.6}}>メニューの中から選んでタップ</p>
+                  </div>
                 </div>
-              </>:<>
-                <p style={{fontSize:13,fontWeight:700,color:"var(--t1)",marginBottom:10}}>ホーム画面に追加する方法</p>
-                <p style={{fontSize:12,color:"var(--t2)",lineHeight:1.8}}>ブラウザのメニューから「ホーム画面に追加」を選んでね</p>
-              </>}
+              </div>:<div style={{padding:"16px 20px"}}>
+                <p style={{fontSize:12,color:"var(--t2)",lineHeight:1.8}}>ブラウザのメニューから「ホーム画面に追加」を選択してね</p>
+              </div>}
+              <div style={{padding:"0 20px 16px"}}>
+                <div style={{padding:"10px 14px",borderRadius:10,background:"rgba(232,98,124,0.04)",border:"1px solid rgba(232,98,124,0.08)"}}>
+                  <p style={{fontSize:10,color:"var(--t3)",lineHeight:1.6,textAlign:"center"}}>✨ 追加するとアプリのように全画面で開けるよ</p>
+                </div>
+              </div>
             </div>}
           </div>;
         })()}
