--- a/index.html
+++ b/index.html
@@ -316,6 +316,17 @@ function FortuneTypeCard({type,className=""}){
   const r=RARITY_INFO[type.rarity];
   const isSSR=type.rarity==="SSR";
   const todayMsg=getTodayMessage(type.id);
+  const [showShare,setShowShare]=useState(false);
+  const [copied,setCopied]=useState(false);
+  const shareText=`${type.name}（${type.sub}）\n${type.share}\n\n夢占い×ホロスコープ「よるのことば」`;
+  const shareUrl="https://yorunokotoba.vercel.app";
+  const fullText=shareText+"\n"+shareUrl;
+  function doShare(platform){
+    if(platform==="x"){window.open(`https://x.com/intent/tweet?text=${encodeURIComponent(shareText)}&url=${encodeURIComponent(shareUrl)}`,"_blank");return}
+    if(platform==="line"){window.open(`https://line.me/R/share?text=${encodeURIComponent(fullText)}`,"_blank");return}
+    if(navigator.share){navigator.share({title:"よるのことば",text:shareText,url:shareUrl}).catch(()=>{});return}
+    const ta=document.createElement("textarea");ta.value=fullText;ta.style.cssText="position:fixed;top:0;left:0;opacity:0";document.body.appendChild(ta);ta.focus();ta.select();try{document.execCommand("copy");setCopied(true);setTimeout(()=>setCopied(false),2000)}catch(e){}document.body.removeChild(ta);
+  }
   return<div className={className} style={{textAlign:"center",margin:"24px 0"}}>
     <div style={{display:"inline-block",padding:"24px 32px",borderRadius:24,background:isSSR?"linear-gradient(135deg,rgba(232,98,124,0.12),rgba(212,168,83,0.08),rgba(176,138,207,0.1))":`linear-gradient(135deg,${type.color}12,${type.color}06)`,border:isSSR?`2px solid ${r.border}`:`1px solid ${type.color}20`,marginBottom:16,boxShadow:isSSR?r.glow:`0 4px 24px ${type.color}08`,animation:isSSR?"rarityGlow 3s ease infinite":"none"}}>
       <div style={{animation:"rarityReveal 0.6s ease both"}}>
@@ -368,36 +379,24 @@ function FortuneTypeCard({type,className=""}){
 
 
 
-    {(()=>{
-      const shareText=`${type.name}（${type.sub}）\n${type.share}\n\n夢占い×ホロスコープ「よるのことば」`;
-      const shareUrl="https://yorunokotoba.vercel.app";
-      const fullText=shareText+"\n"+shareUrl;
-      function doCopy(){
-        if(navigator.share){navigator.share({title:"よるのことば",text:shareText,url:shareUrl}).catch(()=>{});return}
-        try{navigator.clipboard.writeText(fullText).then(()=>{setCopied(true);setTimeout(()=>setCopied(false),2000)}).catch(doFallback)}catch(e){doFallback()}
-      }
-      function doFallback(){const ta=document.createElement("textarea");ta.value=fullText;ta.style.cssText="position:fixed;opacity:0";document.body.appendChild(ta);ta.select();document.execCommand("copy");document.body.removeChild(ta);setCopied(true);setTimeout(()=>setCopied(false),2000)}
-      return<>
-        <button onClick={()=>setShowShare(!showShare)} className="hover-lift" style={{width:"100%",padding:"14px",borderRadius:14,border:"1px solid rgba(232,98,124,0.18)",background:"rgba(232,98,124,0.05)",color:"var(--rose)",fontSize:13,fontWeight:600,fontFamily:"Zen Maru Gothic, sans-serif",cursor:"pointer",marginBottom:8}}>{isSSR?"🌟 伝説タイプをシェア":"📱 タイプをシェア"}</button>
-        {showShare&&<div className="fade-in" style={{marginBottom:8}}>
-          <div style={{display:"flex",gap:8,marginBottom:copied?8:0}}>
-            <button onClick={()=>window.open(`https://x.com/intent/tweet?text=${encodeURIComponent(shareText)}&url=${encodeURIComponent(shareUrl)}`,"_blank")} className="hover-lift" style={{flex:1,padding:"12px 0",borderRadius:12,border:"none",background:"#000",color:"#fff",fontSize:11,fontWeight:700,fontFamily:"Zen Maru Gothic, sans-serif",cursor:"pointer",display:"flex",alignItems:"center",justifyContent:"center",gap:6}}>
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#fff"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
-            </button>
-            <button onClick={doCopy} className="hover-lift" style={{flex:1,padding:"12px 0",borderRadius:12,border:"none",background:"linear-gradient(135deg,#F58529,#DD2A7B,#8134AF,#515BD4)",color:"#fff",fontSize:11,fontWeight:700,fontFamily:"Zen Maru Gothic, sans-serif",cursor:"pointer",display:"flex",alignItems:"center",justifyContent:"center",gap:6}}>
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#fff"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/></svg>
-            </button>
-            <button onClick={doCopy} className="hover-lift" style={{flex:1,padding:"12px 0",borderRadius:12,border:"none",background:"#000",color:"#fff",fontSize:11,fontWeight:700,fontFamily:"Zen Maru Gothic, sans-serif",cursor:"pointer",display:"flex",alignItems:"center",justifyContent:"center",gap:6}}>
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#fff"><path d="M19.59 6.69a4.83 4.83 0 01-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 01-2.88 2.5 2.89 2.89 0 01-2.89-2.89 2.89 2.89 0 012.89-2.89c.28 0 .54.04.79.1V9.01a6.27 6.27 0 00-.79-.05 6.34 6.34 0 00-6.34 6.34 6.34 6.34 0 006.34 6.34 6.34 6.34 0 006.34-6.34V8.98a8.18 8.18 0 004.76 1.52V7.05a4.84 4.84 0 01-1-.36z"/></svg>
-            </button>
-            <button onClick={()=>window.open(`https://line.me/R/share?text=${encodeURIComponent(fullText)}`,"_blank")} className="hover-lift" style={{flex:1,padding:"12px 0",borderRadius:12,border:"none",background:"#06C755",color:"#fff",fontSize:11,fontWeight:700,fontFamily:"Zen Maru Gothic, sans-serif",cursor:"pointer",display:"flex",alignItems:"center",justifyContent:"center",gap:6}}>
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#fff"><path d="M12 2C6.48 2 2 5.82 2 10.5c0 2.95 1.95 5.55 4.87 7.03-.19.67-.68 2.5-.78 2.89-.13.5.18.49.38.36.16-.1 2.53-1.72 3.56-2.42.62.09 1.27.14 1.97.14 5.52 0 10-3.82 10-8.5S17.52 2 12 2z"/></svg>
-            </button>
-          </div>
-          {copied&&<p className="fade-in" style={{textAlign:"center",fontSize:11,color:"var(--rose)",fontWeight:600}}>✓ コピーしました！アプリに貼り付けてね</p>}
-        </div>}
-      </>;
-    })()}
+    <button onClick={()=>setShowShare(!showShare)} className="hover-lift" style={{width:"100%",padding:"14px",borderRadius:14,border:"1px solid rgba(232,98,124,0.18)",background:"rgba(232,98,124,0.05)",color:"var(--rose)",fontSize:13,fontWeight:600,fontFamily:"Zen Maru Gothic, sans-serif",cursor:"pointer",marginBottom:8}}>{isSSR?"🌟 伝説タイプをシェア":"📱 タイプをシェア"}</button>
+    {showShare&&<div className="fade-in" style={{marginBottom:8}}>
+      <div style={{display:"flex",gap:8,marginBottom:copied?8:0}}>
+        <button onClick={()=>doShare("x")} className="hover-lift" style={{flex:1,padding:"12px 0",borderRadius:12,border:"none",background:"#000",color:"#fff",cursor:"pointer",display:"flex",alignItems:"center",justifyContent:"center"}}>
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="#fff"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+        </button>
+        <button onClick={()=>doShare("ig")} className="hover-lift" style={{flex:1,padding:"12px 0",borderRadius:12,border:"none",background:"linear-gradient(135deg,#F58529,#DD2A7B,#8134AF,#515BD4)",color:"#fff",cursor:"pointer",display:"flex",alignItems:"center",justifyContent:"center"}}>
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="#fff"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/></svg>
+        </button>
+        <button onClick={()=>doShare("tt")} className="hover-lift" style={{flex:1,padding:"12px 0",borderRadius:12,border:"none",background:"#000",color:"#fff",cursor:"pointer",display:"flex",alignItems:"center",justifyContent:"center"}}>
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="#fff"><path d="M19.59 6.69a4.83 4.83 0 01-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 01-2.88 2.5 2.89 2.89 0 01-2.89-2.89 2.89 2.89 0 012.89-2.89c.28 0 .54.04.79.1V9.01a6.27 6.27 0 00-.79-.05 6.34 6.34 0 00-6.34 6.34 6.34 6.34 0 006.34 6.34 6.34 6.34 0 006.34-6.34V8.98a8.18 8.18 0 004.76 1.52V7.05a4.84 4.84 0 01-1-.36z"/></svg>
+        </button>
+        <button onClick={()=>doShare("line")} className="hover-lift" style={{flex:1,padding:"12px 0",borderRadius:12,border:"none",background:"#06C755",color:"#fff",cursor:"pointer",display:"flex",alignItems:"center",justifyContent:"center"}}>
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="#fff"><path d="M12 2C6.48 2 2 5.82 2 10.5c0 2.95 1.95 5.55 4.87 7.03-.19.67-.68 2.5-.78 2.89-.13.5.18.49.38.36.16-.1 2.53-1.72 3.56-2.42.62.09 1.27.14 1.97.14 5.52 0 10-3.82 10-8.5S17.52 2 12 2z"/></svg>
+        </button>
+      </div>
+      {copied&&<p className="fade-in" style={{textAlign:"center",fontSize:11,color:"var(--rose)",fontWeight:600}}>✓ コピーしました！アプリに貼り付けてね</p>}
+    </div>}
   </div>;
 }
 
@@ -430,9 +429,7 @@ function App(){
   const [sign,setSign]=useState("");const [gender,setGender]=useState("");
   const [birthYear,setBirthYear]=useState("");const [birthMonth,setBirthMonth]=useState("");const [birthDay,setBirthDay]=useState("");
   const [prefecture,setPrefecture]=useState("");
-  const [showShare,setShowShare]=useState(false);
   const [showInstall,setShowInstall]=useState(false);
-  const [copied,setCopied]=useState(false);
   function autoSetSign(y,m,d){
     m=parseInt(m);d=parseInt(d);if(!m||!d){setSign("");return}
     const boundaries=[[120,"みずがめ座"],[219,"うお座"],[321,"おひつじ座"],[420,"おうし座"],[521,"ふたご座"],[622,"かに座"],[723,"しし座"],[823,"おとめ座"],[923,"てんびん座"],[1023,"さそり座"],[1122,"いて座"],[1222,"やぎ座"]];
