--- a/index.html
+++ b/index.html
@@ -11,8 +11,31 @@
 <meta property="og:title" content="よるのことば — 夢占い×ホロスコープ"/>
 <meta property="og:description" content="あなたの深層心理を12のキャラクターが読み解く"/>
 <meta property="og:type" content="website"/>
-<link rel="manifest" href="data:application/json;base64,eyJuYW1lIjoi44KI44KL44Gu44GT44Go44GwIiwic2hvcnRfbmFtZSI6IuOCiOOCi+OBk+OBqOOBsCIsInN0YXJ0X3VybCI6Ii4vIiwiZGlzcGxheSI6InN0YW5kYWxvbmUiLCJiYWNrZ3JvdW5kX2NvbG9yIjoiI0ZGRjVGMCIsInRoZW1lX2NvbG9yIjoiI0ZGRjVGMCIsImljb25zIjpbXX0="/>
+<link rel="manifest" href="/manifest.json"/>
 <title>よるのことば</title>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W6JL87BZFX"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','G-W6JL87BZFX')</script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-messaging-compat.js"></script>
+<script>
+firebase.initializeApp({
+  apiKey:"AIzaSyAMSAW3ez0Hir2Guv4ibbuxUgzRTuS14PI",
+  authDomain:"yorunokotoba-5df51.firebaseapp.com",
+  projectId:"yorunokotoba-5df51",
+  storageBucket:"yorunokotoba-5df51.firebasestorage.app",
+  messagingSenderId:"133287391957",
+  appId:"1:133287391957:web:aafda69540c7359ba1a85c"
+});
+window.fbMessaging=null;
+async function initPush(){
+  try{
+    const reg=await navigator.serviceWorker.register('/firebase-messaging-sw.js');
+    const messaging=firebase.messaging();
+    const token=await messaging.getToken({vapidKey:"BMaXF44Ya4nZg-zfpfHKp6wr2gPRBlf3nkoCJ9z3CQxWmOGyOZFxLoSHYNCYrtHi0R0_mxW7u-mjTq5HpEaqDcw",serviceWorkerRegistration:reg});
+    if(token){localStorage.setItem('ynk_push_token',token);window.fbMessaging=messaging}
+  }catch(e){console.log('Push setup error:',e)}
+}
+</script>
 <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;500;700&family=Cormorant:ital,wght@0,300;0,400;0,500;1,300&display=swap" rel="stylesheet"/>
 <style>
 *{box-sizing:border-box;margin:0;padding:0}
@@ -432,6 +455,11 @@ function App(){
   const [birthYear,setBirthYear]=useState("");const [birthMonth,setBirthMonth]=useState("");const [birthDay,setBirthDay]=useState("");
   const [prefecture,setPrefecture]=useState("");
   const [showInstall,setShowInstall]=useState(false);
+  const [pushEnabled,setPushEnabled]=useState(()=>!!localStorage.getItem('ynk_push_token'));
+  function requestPush(){
+    if(!('Notification' in window)||!('serviceWorker' in navigator)){alert('このブラウザは通知に対応していません');return}
+    Notification.requestPermission().then(p=>{if(p==='granted'){initPush().then(()=>setPushEnabled(true))}});
+  }
   const [editProfile,setEditProfile]=useState(false);
   
   // Load saved profile
@@ -561,8 +589,13 @@ function App(){
         <button onClick={startFortune} disabled={!canFortune} style={{width:"100%",padding:"16px 0",...(canFortune?btnStyle:btnOff)}}>ホロスコープを見る</button>
       </Card>}
 
-      {page==="home"&&<div className="slide-up-3" style={{textAlign:"center",padding:"12px 16px",borderRadius:12,background:"rgba(255,255,255,0.4)",marginTop:24,marginBottom:12}}>
-        <p style={{fontSize:11,color:"var(--t3)",lineHeight:1.6}}></p>
+      {page==="home"&&!pushEnabled&&<div className="slide-up-3" style={{marginTop:20,marginBottom:12}}>
+        <Card style={{textAlign:"center",padding:20,background:"linear-gradient(135deg,rgba(232,98,124,0.04),rgba(176,138,207,0.04))"}}>
+          <p style={{fontSize:14,marginBottom:4}}>🔔</p>
+          <p style={{fontSize:13,fontWeight:700,color:"var(--t1)",marginBottom:6}}>毎朝、今日の運勢をお届け</p>
+          <p style={{fontSize:11,color:"var(--t3)",marginBottom:14,lineHeight:1.6}}>通知をONにすると毎朝8時にお知らせが届くよ</p>
+          <button onClick={requestPush} className="hover-lift" style={{padding:"12px 32px",borderRadius:12,border:"none",background:"var(--grad)",color:"#fff",fontSize:13,fontWeight:700,fontFamily:"Zen Maru Gothic, sans-serif",cursor:"pointer"}}>通知をONにする</button>
+        </Card>
       </div>}
       {page==="home"&&<PremiumCTA style={{marginBottom:32}}/>}
 
