--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="default"/>
 <meta name="apple-mobile-web-app-title" content="よるのことば"/>
+<link rel="apple-touch-icon" href="/icon-192.png"/>
 <meta name="description" content="夢占い×ホロスコープ。あなたの深層心理を12のキャラクターが読み解く。"/>
 <meta property="og:title" content="よるのことば — 夢占い×ホロスコープ"/>
 <meta property="og:description" content="あなたの深層心理を12のキャラクターが読み解く"/>
