--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <meta property="og:title" content="よるのことば — 夢占い×ホロスコープ"/>
 <meta property="og:description" content="あなたの深層心理を12のキャラクターが読み解く"/>
 <meta property="og:type" content="website"/>
+<meta property="og:image" content="https://yorunokotoba.vercel.app/ogp.png"/>
+<meta property="og:image:width" content="1200"/>
+<meta property="og:image:height" content="630"/>
+<meta property="og:url" content="https://yorunokotoba.vercel.app"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="https://yorunokotoba.vercel.app/ogp.png"/>
 <link rel="manifest" href="/manifest.json"/>
 <title>よるのことば</title>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W6JL87BZFX"></script>
